--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "@types/cytoscape": "^3.19.9",
+    "cytoscape": "^3.23.0",
+    "cytoscape-navigator": "^2.0.2",
+    "cytoscape-panzoom": "^2.5.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
